--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,34 +8,50 @@
     tools:context=".LearningFragment">
 
     <ImageView
-        android:layout_width="match_parent"
+        android:id="@+id/headerImage"
+        android:layout_width="0dp"
         android:layout_height="112dp"
-        android:background="#089156" />
+        android:background="#089156"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/learingTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/pretendard_semibold"
         android:text="교육공간"
-        android:fontFamily="@font/pretendard_extrabold"
         android:textColor="@color/white"
-        android:textSize="24dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginLeft="39dp" />
+        android:paddingTop="19dp"
+        android:paddingStart="24dp"
+        app:layout_constraintTop_toTopOf="@id/headerImage"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/learingSubtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="교육을 통해 실력을 키워보세요."
-        android:fontFamily="@font/pretendard_extralight"
+        android:fontFamily="@font/pretendard_medium"
         android:textColor="@color/white"
-        android:textSize="20dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginLeft="39dp"/>
+        android:alpha="0.90"
+        android:letterSpacing="-0.01"
+        android:text="교육을 통해 실력을 키워보세요."
+        android:paddingStart="24dp"
+        android:paddingTop="6dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/learingTitle" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="140dp"/>
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/headerImage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
