--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".MyProfileFragment">
+    tools:context=".DuckProfileFragment2">
 
     <ImageView
         android:id="@+id/headerImage"
         android:layout_width="0dp"
-        android:layout_height="112dp"
+        android:layout_height="0dp"
         android:background="#7272BA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_percent="0.15" />
 
     <TextView
         android:id="@+id/headerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="39dp"
-        android:layout_marginTop="17dp"
-        android:fontFamily="@font/pretendard_extrabold"
+        android:fontFamily="@font/pretendard_semibold"
         android:text="내 공간"
         android:textColor="@color/white"
-        android:textSize="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/headerImage" />
+        android:paddingTop="19dp"
+        android:paddingStart="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <TextView
         android:id="@+id/headerSubtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="39dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/pretendard_extralight"
-        android:text="자신의 실력을 검증하세요."
+        android:fontFamily="@font/pretendard_regular"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:alpha="0.90"
+        android:letterSpacing="-0.01"
+        android:text="학습 능력을 확인해보세요."
+        android:paddingStart="24dp"
+        android:paddingTop="6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/headerTitle" />
 
@@ -55,11 +58,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:background="@color/white"
         app:layout_constraintHeight_percent="0.40"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +72,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
@@ -77,7 +81,8 @@
                 android:layout_height="120dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="18dp"
-                android:src="@drawable/character" />
+                android:src="@drawable/duck_baby"
+                android:scaleType="centerInside"/>
 
             <TextView
                 android:id="@+id/textViewName"
@@ -87,8 +92,8 @@
                 android:text="이름"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                />
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -98,12 +103,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/digitalage_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="디지털 연령 "
                     android:textColor="@color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/pretendard_regular"
+                    />
+
 
                 <TextView
                     android:id="@+id/digitalAge"
@@ -111,12 +118,14 @@
                     android:layout_height="wrap_content"
                     android:text="노인"
                     android:textColor="@color/black"
-                    android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:fontFamily="@font/pretendard_medium"/>
+
 
             </LinearLayout>
+
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+    </FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/buttonContainer"
@@ -127,18 +136,24 @@
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardView">
+        app:layout_constraintTop_toBottomOf="@id/cardView"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:id="@+id/examResultCardView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
-            app:cardCornerRadius="16dp"
             app:layout_constraintHeight_percent="1"
             app:layout_constraintEnd_toStartOf="@+id/CheckResultCardView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/rounded_button">
+
+            <com.sungkyul.synergy.utils.GalaxyButton
+                android:id="@+id/exam_galaxy_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -147,15 +162,16 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/examResultText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:text="시험결과\n확인하기"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textColor="#333333"
+                    android:fontFamily="@font/pretendard_semibold"/>
+
 
                 <ImageView
                     android:layout_width="70dp"
@@ -164,36 +180,39 @@
                     android:layout_marginTop="18dp"
                     android:src="@drawable/check_my_profile2" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:id="@+id/CheckResultCardView"
             android:layout_width="0dp"
             android:layout_height="170dp"
             android:layout_marginStart="8dp"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="3dp"
+            android:background="@drawable/rounded_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/examResultCardView"
             app:layout_constraintTop_toTopOf="parent">
 
+            <com.sungkyul.synergy.utils.GalaxyButton
+                android:id="@+id/check_galaxy_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/checkResultText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:text="학습능력\n평가하기"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
+                    android:textColor="#333333"
+                    android:fontFamily="@font/pretendard_semibold" />
 
                 <ImageView
                     android:layout_width="70dp"
@@ -201,8 +220,11 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="18dp"
                     android:src="@drawable/person_my_profile" />
+
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+
+        </FrameLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
