--- a/app/src/main/res/layout/activity_check_learning_ability.xml
+++ b/app/src/main/res/layout/activity_check_learning_ability.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1"
-    tools:context=".DuckProfileFragment2">
+    tools:context=".CheckLearningAbilityActivity">
 
     <FrameLayout
         android:id="@+id/headerImage"
@@ -262,7 +262,7 @@
                         android:gravity="center"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/average_time">
+                        app:layout_constraintEnd_toStartOf="@id/textViewAverageTime">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -282,7 +282,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/average_time"
+                        android:id="@+id/textViewAverageTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toTopOf="parent"
@@ -312,7 +312,7 @@
                         android:orientation="vertical"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/today_time">
+                        app:layout_constraintEnd_toStartOf="@id/textViewTodayTime">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -332,7 +332,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/today_time"
+                        android:id="@+id/textViewTodayTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toTopOf="parent"
