--- a/app/src/main/res/layout/activity_check_learning_ability.xml
+++ b/app/src/main/res/layout/activity_check_learning_ability.xml
@@ -47,6 +47,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="XXX님의 취약 유형"
@@ -54,7 +55,7 @@
                 android:textSize="28sp"
                 android:textStyle="bold"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!--<androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_marginTop="28dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -208,6 +209,35 @@
                     </FrameLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/status_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="128dp"
+                    android:src="@drawable/sebook_sad_face"
+                    android:scaleType="centerInside"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/status_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <TextView
+                    android:id="@+id/status_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="아직 측정되지 않았습니다."
+                    android:textSize="24sp"
+                    app:layout_constraintTop_toBottomOf="@id/status_image"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
