--- a/app/src/main/res/layout/activity_exam_result_test.xml
+++ b/app/src/main/res/layout/activity_exam_result_test.xml
@@ -26,7 +26,7 @@
             android:text="화면구성 실습"
             android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/white"
-            android:textSize="24sp"/>
+            android:textSize="28sp"/>
     </FrameLayout>
 
     <TextView
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00차 시험 결과"
-        android:textSize="24sp"
+        android:textSize="28sp"
         android:textColor="@color/black"
         android:fontFamily="@font/pretendard_medium"
         app:layout_constraintTop_toBottomOf="@+id/h_line_1"
@@ -50,7 +50,9 @@
         app:layout_constraintTop_toTopOf="@+id/h_line_2"
         app:layout_constraintBottom_toBottomOf="@+id/h_line_3"
         app:layout_constraintLeft_toLeftOf="@+id/v_line_2"
-        app:layout_constraintRight_toRightOf="@+id/v_line_5"/>
+        app:layout_constraintRight_toRightOf="@+id/v_line_5"
+        app:layout_constraintWidth_percent="0.6"
+        app:layout_constraintHeight_percent="0.35"/>
 
     <TextView
         android:id="@+id/resultTextView"
@@ -59,7 +61,7 @@
         android:text="2/10"
         android:textColor="@color/black"
         android:fontFamily="@font/pretendard_medium"
-        android:textSize="24sp"
+        android:textSize="28sp"
         app:layout_constraintTop_toBottomOf="@+id/h_line_4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
@@ -72,7 +74,10 @@
         app:layout_constraintBottom_toBottomOf="@+id/h_line_6"
         app:layout_constraintLeft_toLeftOf="@+id/v_line_1"
         app:layout_constraintRight_toRightOf="@+id/v_line_3"
-        android:background="@drawable/round_corner_white">
+        android:background="@drawable/round_corner_white"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintHeight_percent="0.25"
+        android:layout_marginTop="40dp">
 
         <View
             android:id="@+id/space_above_back"
@@ -89,7 +94,7 @@
             android:text="돌아가기"
             android:textColor="@color/black"
             android:fontFamily="@font/pretendard_semibold"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/space_above_back"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +120,10 @@
         app:layout_constraintBottom_toBottomOf="@+id/h_line_6"
         app:layout_constraintLeft_toLeftOf="@+id/v_line_4"
         app:layout_constraintRight_toRightOf="@+id/v_line_6"
-        android:background="@drawable/round_corner_white">
+        android:background="@drawable/round_corner_white"
+        app:layout_constraintWidth_percent="0.4"
+        app:layout_constraintHeight_percent="0.25"
+        android:layout_marginTop="40dp">
 
         <View
             android:id="@+id/space_above_view_all"
@@ -132,7 +140,7 @@
             android:text="문제보기"
             android:textColor="@color/black"
             android:fontFamily="@font/pretendard_semibold"
-            android:textSize="20sp"
+            android:textSize="24sp"
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@id/space_above_view_all"
             app:layout_constraintStart_toStartOf="parent"
