--- a/app/src/main/res/layout/activity_exam_problem.xml
+++ b/app/src/main/res/layout/activity_exam_problem.xml
@@ -23,7 +23,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="문제1"
+                    android:text="실습 문제"
                     android:textColor="@color/white"
                     android:textSize="36dp"
                     android:textStyle="bold" />
