--- a/app/src/main/res/layout/fragment_duck_profile.xml
+++ b/app/src/main/res/layout/fragment_duck_profile.xml
@@ -88,12 +88,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/digi_age1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="디지털 연령 "
                     android:textColor="@color/black"
                     android:textSize="20sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/digitalAge"
