--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -90,13 +90,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/digitalage_name"
+                    android:id="@+id/digitalageName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/pretendard_regular"
                     android:text="디지털 연령 "
                     android:textColor="@color/black"
-                    android:fontFamily="@font/pretendard_regular"
-                    />
+                    android:visibility="gone" />
 
 
                 <TextView
