--- a/app/src/main/res/layout/activity_basicedu_main.xml
+++ b/app/src/main/res/layout/activity_basicedu_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:background="#089156"
-        android:padding="16dp"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,19 +22,31 @@
         app:layout_constraintHeight_percent="0.2"> <!-- 높이를 화면의 20%로 설정 -->
 
         <TextView
+            android:id="@+id/basic_edu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="기초 교육"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/pretendard_semibold"
+            android:text="기초교육"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:paddingTop="19dp"
+            android:paddingStart="24dp"/>
 
         <TextView
+            android:id="@+id/basic_edu_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/pretendard_semibold"
             android:text="휴대폰의 다양한 기능을 만나보세요."
-            android:textColor="#E1E1E1"
-            android:textSize="17sp" />
+            android:textColor="@color/white"
+            android:alpha="0.90"
+            android:letterSpacing="-0.01"
+            app:layout_constraintTop_toBottomOf="@id/iconedu_tool"
+            app:layout_constraintStart_toStartOf="parent"
+            android:paddingStart="24dp"
+            android:paddingTop="6dp"/>
+
     </LinearLayout>
 
     <!-- 버튼 영역 -->
