--- a/app/src/main/res/layout/activity_my_exam_result.xml
+++ b/app/src/main/res/layout/activity_my_exam_result.xml
@@ -11,37 +11,38 @@
     <ImageView
         android:id="@+id/headerImage"
         android:layout_width="0dp"
-        android:layout_height="112dp"
+        android:layout_height="0dp"
         android:background="#7272BA"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.2"/>
 
     <TextView
         android:id="@+id/headerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="내 공간"
-        android:fontFamily="@font/pretendard_extrabold"
+        android:fontFamily="@font/pretendard_semibold"
         android:textColor="@color/white"
-        android:textSize="24dp"
-        app:layout_constraintTop_toTopOf="@id/headerImage"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="17dp"
-        android:layout_marginLeft="39dp" />
+        android:paddingTop="19dp"
+        android:paddingStart="24dp" />
 
     <TextView
         android:id="@+id/headerSubtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="자신의 실력을 검증하세요."
-        android:fontFamily="@font/pretendard_extralight"
+        android:fontFamily="@font/pretendard_semibold"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:alpha="0.90"
+        android:letterSpacing="-0.01"
         app:layout_constraintTop_toBottomOf="@id/headerTitle"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="39dp" />
+        android:paddingStart="24dp"
+        android:paddingTop="6dp" />
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
