--- a/app/src/main/res/layout/learning_item_button.xml
+++ b/app/src/main/res/layout/learning_item_button.xml
@@ -8,10 +8,10 @@
     <LinearLayout
         android:id="@+id/learning_layout"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="16dp"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:padding="12dp"
+        android:layout_margin="12dp"
         android:background="@drawable/round_corner_white"
         android:orientation="vertical"
         android:elevation="6dp">
@@ -59,5 +59,6 @@
         android:id="@+id/edu_button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="12dp"
         android:translationZ="25dp"/>
 </FrameLayout>
