--- a/app/src/main/res/layout/fragment_exam_space.xml
+++ b/app/src/main/res/layout/fragment_exam_space.xml
@@ -161,7 +161,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="실습형"
+                android:text="전체"
                 android:fontFamily="@font/pretendard_semibold"
                 android:textColor="@color/black"
                 />
@@ -171,7 +171,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="문제"
+                android:text="실습"
                 android:fontFamily="@font/pretendard_semibold"
                 />
         </LinearLayout>
